# tkinter-mvc-app

./: .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  backend.py  frontend.py  junit.xml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.config/: pyproject.toml
.config/development/: .toml-sort.ini  bandit.yml
.cspell/: custom-dictionary-workspace.txt
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  greetings.yml  makefile-ci.yml  makefile.yml  python-app.yml
aplicativo/: meu_app.py
aplicativo/backend/controllers/: controller.py
aplicativo/backend/models/: model.py
aplicativo/backend/tools/: dados_servidor.py  resultado.py
aplicativo/frontend/assets/: estilos.json
aplicativo/frontend/views/: main_view.py
app/: __init__.py  main.py
app/backend/: __init__.py
app/backend/controller/: app_controller.py
app/backend/model/: app_model.py
app/backend/modelos/: objetos.py
app/backend/servicos/: analise_servico.py
app/backend/tools/: app_ferramentas.py  app_tools.py  resultado.py  sistema_info.py
app/frontend/: __init__.py  gui.py
desenhos/: Diagrama sem nome.drawio
docs/source/: conf.py  index.rst
src/: app.py  main.py  novo.py
src/controllers/: file_manager_controller.py  main_controller.py  path_controller.py  path_manager_controller.py
src/models/: analysis_result.py  data_model.py  path_system_model.py  paths_objects.py
src/tools/: __init__.py  datetime_utils.py  helper.py  path_definitions.py  path_operations.py  path_toolkit.py  path_utils.py
src/views/: frontend.py  main_view.py  path_visualization.py
tests/: __init__.py
tests/backend/: test_analise_servico.py  test_gerenciador_arquivos.py
tests/backend/model/: test_app_model.py
tests/backend/modelos/: test_analise_servico.py
tests/backend/tools/: test_app_ferramentas.py  test_app_tools.py  test_resultado.py  test_sistema_info.py
tests/models/: test_path_system_model.py
tests/test_controllers/: test_main_controller.py
tests/test_models/: test_analysis_result.py  test_data_model.py  test_paths_objects.py
tests/test_tools/: __init__.py  test_datetime_utils.py  test_helper.py  test_path_operations.py
tests/test_views/: test_main_view.py
tests/tools/: test_path_definitions.py
