[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
known_third_party = ["some_third_party_library"]
known_first_party = ["your_project_name"]
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --tb=short"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
