[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkinter-mvc-app"
version = "0.1.0"
description = "Aplicativo MVC com Tkinter para gestão de arquivos"
authors = [{name = "Seu Nome", email = "seu@email.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "ttkbootstrap>=1.12,<2.0",
    "ttkthemes>=3.2,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "requests>=2.31,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.3,<25.0",
    "isort>=5.13,<6.0",
    "flake8>=7.0,<8.0",
    "mypy>=1.8,<2.0",
    "ipython>=8.22,<9.0",
    "pre-commit>=3.6,<4.0",
]
test = [
    "pytest>=8.1,<9.0",
    "pytest-cov>=4.1,<5.0",
    "coverage>=7.4,<8.0",
]
ui = [
    "pyqt5>=5.15,<6.0",  # Isso instalará o pyuic5
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=tkinter_mvc_app --cov-report=term --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = ["error"]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_third_party = ["ttkbootstrap", "requests"]
known_first_party = ["tkinter_mvc_app"]
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.flake8]
line_length = 100
max_line_length = 100

[tool.pylint]
disable = ["R0902", "R0903"]
max-line-length = 100
